# sandician

./: .gitattributes  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: build.yml  clippy.yml  deploy_pages.yml  update-flake.yml
benches/: bench.rs  rand.rs
pages/: index.html  manifest.json
src/: component.rs
src/component/: grid.rs  grid_plugin.rs  inputs.rs  macros.rs  particle.rs  particles.rs  render.rs
src/component/particles/: acid.rs  drain.rs  particle.rs  rock.rs  salt.rs  sand.rs  tap.rs  water.rs
