[package]
name = "sandsim"
version = "0.1.0"
edition = "2024"

[dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }
rand = "0.9.2"

[build-dependencies]
wasm-bindgen = "=0.2.100"

[dependencies.bevy]
version = "0.17"
default-features = false
features = [
"bevy_sprite_render",
"bevy_sprite",
"bevy_sprite_picking_backend",
"bevy_ui",
"bevy_ui_render",
"bevy_ui_picking_backend",
"bevy_winit",
"default_font",
"bevy_post_process",
"std",
"webgl2",
"x11",
]

[lib]
name = "sandsim"
path = "src/lib.rs"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "bench"
harness = false
