[package]
name = "sandsim"
edition = "2024"

[dependencies]
bevy_embedded_assets = "0.14.0"
fastrand = "2.3.0"

[build-dependencies]
wasm-bindgen = "=0.2.104"

[dependencies.bevy]
version = "0.17"
default-features = false
features = [
"bevy_log",
"bevy_sprite_render",
"bevy_sprite",
"bevy_sprite_picking_backend",
"bevy_ui",
"bevy_ui_render",
"bevy_ui_picking_backend",
"bevy_winit",
"default_font",
"bevy_post_process",
"std",
"webgl2",
"x11",
]

[lib]
name = "sandsim"
path = "src/lib.rs"
bench = false

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
criterion = "0.8.1"
pretty_assertions = "1.4.1"
rand = "0.9.2"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "rand"
harness = false
